# arrow-format

./: .gitignore  Cargo.toml  README.md  generate.sh
src/: flight.rs  lib.rs
src/flight/: data.rs  service.rs
src/ipc/: generated.rs  mod.rs
