[package]
name = "arrow-format"
version = "0.3.0"
edition = "2018"
license = "Apache-2.0"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
keywords = [ "arrow", "analytics" ]
description = "Unofficial flatbuffers and tonic code of Apache Arrow spec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
planus = { git = "https://github.com/TethysSvensson/planus", branch = "main", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive", "std"] }

tonic = { version = "0.6.0", optional = true }
prost = { version = "0.9.0", optional = true }
prost-derive = { version = "0.9.0", optional = true }

[features]
default = []
full = ["ipc", "flight-data", "flight-service"]
flight-data = ["prost", "prost-derive"]
flight-service = ["flight-data", "tonic"]
ipc = ["planus", "serde"]
